--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 </head>
 <body>
     <div class="videodiv">
-        <!-- <video autoplay loop id="myVideo">
-          <source src="https://youtu.be/gn2kd_ZZ9_M" type="video" />
+        <video autoplay controls loop id="myVideo">
+          <source src="intro.mp4" type="video/mp4" />
           Your browser does not support HTML5 video.
-        </video> -->
-        <iframe src="https://www.youtube.com/embed/gn2kd_ZZ9_M?playlist=gn2kd_ZZ9_M&loop=1&autoplay=1&controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </video>
       </div>
     <div class="sidebar-box">
         
